--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,5 @@
 {
     "name": "OAuth Twiwtter",
     "description": "PHP file to connect Twitter ",
-
-    "minimum-stability": "dev",
-
-    "repositories": 
-        [
-        {
-            "type": "vcs",
-            "url": "https://github.com/vovamik/twitter-oauth.git"
-        }],
-
-    "autoload": {
-        "psr-0": {
-            "Twitter": "src/"
-        },
-    }
-
-
-
+    "version": "1.0.0"
 }
